starting cross_val_score assessment

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -620,11 +620,19 @@
    "source": [
     "## Evaluation Metrics\n",
     "\n",
-    "For this business problem, we will use F1 score as the main metric, while also looking at Precision and Recall. The F1 score finds the harmonic mean between Precision and Recall, and it's useful for data with high class imbalance.\n",
+    "For this business problem, **we will use F1 score as the main metric**, while also looking at Precision and Recall. The F1 score finds the harmonic mean between Precision and Recall, and it's useful for data with high class imbalance.\n",
     "\n",
-    "We will also be looking at the weighted F1 score, as it can account for the class imbalance in labels by calculating metrics for each label. It finds their average weighted by support (the number of true instances for each label). This results in a F1 score that is not between precision and recall.\n",
+    "**Overall, we want as much hate speech to flagged as possible** and so that it can be efficiently removed. This means **optomizing the True Positive Rate**.\n",
     "\n",
-    "Overall, we want as much hate speech to flagged as possible and so that it can be efficiently removed. This means optomizing the True Positive Rate."
+    "### Weighted F1 Score\n",
+    "\n",
+    "We will also be looking at the weighted F1 score, as it **can account for the class imbalance in labels by calculating metrics for each label**. It finds their average weighted by support (the number of true instances for each label). This results in a F1 score that is not between precision and recall.\n",
+    "\n",
+    "### Cross Validation\n",
+    "\n",
+    "Additionally, in order to see **whether or not a model is overfit**, we can use K-Fold Cross Validation to generate a F1 score for the training set. \n",
+    "\n",
+    "This method uses a limited sample in order to estimate how the model is expected to perform when making predictions on unseen data. For each model, 'K\" aka the number of folds will be 5. This means that the data sample will be split into 5 groups and each used as the test set."
    ]
   },
   {
@@ -677,7 +685,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "CPU times: user 41.2 s, sys: 427 ms, total: 41.6 s\nWall time: 42.5 s\n"
+      "CPU times: user 40.2 s, sys: 227 ms, total: 40.4 s\nWall time: 40.8 s\n"
      ]
     }
    ],
@@ -691,28 +699,22 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "rf_precision = precision_score(y_test, rf_test_preds)\n",
-    "rf_recall = recall_score(y_test, rf_test_preds)\n",
-    "rf_f1_score = f1_score(y_test, rf_test_preds)\n",
-    "rf_f1_weighted = f1_score(y_test, rf_test_preds, average='weighted')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Testing Evaluation Metrics:\nPrecision: 0.4128\nRecall: 0.1613\nF1 Score: 0.232\nWeighted F1 Score: 0.9272\n"
+      "Testing Set Evaluation Metrics:\nPrecision: 0.4128\nRecall: 0.1613\nF1 Score: 0.232\nWeighted F1 Score: 0.9272\n"
      ]
     }
    ],
    "source": [
+    "rf_precision = precision_score(y_test, rf_test_preds)\n",
+    "rf_recall = recall_score(y_test, rf_test_preds)\n",
+    "rf_f1_score = f1_score(y_test, rf_test_preds)\n",
+    "rf_f1_weighted = f1_score(y_test, rf_test_preds, average='weighted')\n",
+    "\n",
+    "# printing scores\n",
     "helpers.evaluation(rf_precision, rf_recall, rf_f1_score, rf_f1_weighted)"
    ]
   },
@@ -724,15 +726,79 @@
    ]
   },
   {
+   "source": [
+    "As mentioned above, we can take the cross validated F1 for the training set to determine whether the model is overfit or underfit.\n",
+    "\n",
+    "⏳ the cell below takes about 9 minutes to run"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "CPU times: user 8min 51s, sys: 2.99 s, total: 8min 54s\nWall time: 8min 59s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# training f1\n",
+    "rf_f1_cv = cross_val_score(rf_baseline, tfidf_data_train, y_train, scoring='f1', cv=5)\n",
+    "rf_mean_cv = round(rf_f1_cv.mean(), 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'underfit'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
+   "source": [
+    "# is this model overfit or underfit?\n",
+    "rf_fit = helpers.fit(rf_mean_cv, rf_f1_score)\n",
+    "rf_fit"
+   ]
+  },
+  {
+   "source": [
+    "### Explain overfit vs. underfit - which is preferred and why?\n",
+    "\n",
+    ".\n",
+    "\n",
+    ".\n",
+    "\n",
+    "We can store the evaluation metrics for each model into a dictionary, and print them later for comparison.\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# creating dictionary to store all metrics\n",
     "metric_dict = {}\n",
     "# adding scores to metric_dict\n",
-    "metric_dict['Baseline Random Forest'] = {'precision': rf_precision, 'recall': rf_recall, 'f1_score': rf_f1_score, 'weighted_f1': rf_f1_weighted}"
+    "metric_dict['Baseline Random Forest'] = {'precision': rf_precision, 'recall': rf_recall, 'f1_score': rf_f1_score, 'weighted_f1': rf_f1_weighted, 'fit': rf_fit}"
    ]
   },
   {
@@ -796,7 +862,10 @@
     "logreg_precision = precision_score(y_test, logreg_test_preds)\n",
     "logreg_recall = recall_score(y_test, logreg_test_preds)\n",
     "logreg_f1_score = f1_score(y_test, logreg_test_preds)\n",
-    "logreg_f1_weighted = f1_score(y_test, logreg_test_preds, average='weighted')"
+    "logreg_f1_weighted = f1_score(y_test, logreg_test_preds, average='weighted')\n",
+    "\n",
+    "# printing scores\n",
+    "helpers.evaluation(logreg_precision, logreg_recall, logreg_f1_score, logreg_f1_weighted)"
    ]
   },
   {
@@ -813,7 +882,7 @@
     }
    ],
    "source": [
-    "helpers.evaluation(logreg_precision, logreg_recall, logreg_f1_score, logreg_f1_weighted)"
+    "# helpers.evaluation(logreg_precision, logreg_recall, logreg_f1_score, logreg_f1_weighted)"
    ]
   },
   {
@@ -890,7 +959,10 @@
     "bayes_precision = precision_score(y_test, bayes_test_preds)\n",
     "bayes_recall = recall_score(y_test, bayes_test_preds)\n",
     "bayes_f1_score = f1_score(y_test, bayes_test_preds)\n",
-    "bayes_f1_weighted = f1_score(y_test, bayes_test_preds, average='weighted')"
+    "bayes_f1_weighted = f1_score(y_test, bayes_test_preds, average='weighted')\n",
+    "\n",
+    "# printing scores\n",
+    "helpers.evaluation(bayes_precision, bayes_recall, bayes_f1_score, bayes_f1_weighted)"
    ]
   },
   {
@@ -907,7 +979,7 @@
     }
    ],
    "source": [
-    "helpers.evaluation(bayes_precision, bayes_recall, bayes_f1_score, bayes_f1_weighted)"
+    "# helpers.evaluation(bayes_precision, bayes_recall, bayes_f1_score, bayes_f1_weighted)"
    ]
   },
   {
@@ -995,7 +1067,10 @@
     "SVM_precision = precision_score(y_test, SVM_test_preds)\n",
     "SVM_recall = recall_score(y_test, SVM_test_preds)\n",
     "SVM_f1_score = f1_score(y_test, SVM_test_preds)\n",
-    "SVM_f1_weighted = f1_score(y_test, SVM_test_preds, average='weighted')"
+    "SVM_f1_weighted = f1_score(y_test, SVM_test_preds, average='weighted')\n",
+    "\n",
+    "# printing scores\n",
+    "helpers.evaluation(SVM_precision, SVM_recall, SVM_f1_score, SVM_f1_weighted)"
    ]
   },
   {
@@ -1012,7 +1087,7 @@
     }
    ],
    "source": [
-    "helpers.evaluation(SVM_precision, SVM_recall, SVM_f1_score, SVM_f1_weighted)"
+    "# helpers.evaluation(SVM_precision, SVM_recall, SVM_f1_score, SVM_f1_weighted)"
    ]
   },
   {
@@ -1031,67 +1106,6 @@
     "# adding scores to metric_dict\n",
     "metric_dict['Baseline SVM'] = {'precision': SVM_precision, 'recall': SVM_recall, 'f1_score': SVM_f1_score, 'weighted_f1': SVM_f1_weighted}"
    ]
-  },
-  {
-   "source": [
-    "### Cross Validation Score\n",
-    "\n",
-    "How does this give us a better point of comparison on how each model performs on unseen data?"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "⏳ the cell below takes about 3 minutes to run"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Cross-Validation F1 Scores: [0.35356201 0.37433155 0.33057851 0.4099723  0.36997319]\n\nMin:  0.330579\nMax:  0.409972\nMean:  0.367684\nRange:  0.079394\nCPU times: user 2min 29s, sys: 2.26 s, total: 2min 31s\nWall time: 2min 32s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "helpers.cross_validation(SVM_baseline, tfidf_data_train, y_train, 'f1', 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# make sure this works\n",
-    "SVM_cv_f1 = round(scores.mean(), 6))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# clean this section up by adding this to the above dict. if it works for everythig, then change each model.\n",
-    "metric_dict['Baseline SVM'] = {'cv_f1': SVM_cv_f1}"
-   ]
-  },
-  {
-   "source": [
-    "⏳ the cell below takes about 4 seconds to run"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
   },
   {
    "cell_type": "markdown",
@@ -1468,7 +1482,10 @@
     "doc_SVM_precision = precision_score(doc_y_test, doc_SVM_y_preds)\n",
     "doc_SVM_recall = recall_score(doc_y_test, doc_SVM_y_preds)\n",
     "doc_SVM_f1_score = f1_score(doc_y_test, doc_SVM_y_preds)\n",
-    "doc_SVM_f1_weighted = f1_score(doc_y_test, doc_SVM_y_preds, average='weighted')"
+    "doc_SVM_f1_weighted = f1_score(doc_y_test, doc_SVM_y_preds, average='weighted')\n",
+    "\n",
+    "# printing scores\n",
+    "helpers.evaluation(doc_SVM_precision, doc_SVM_recall, doc_SVM_f1_score, doc_SVM_f1_weighted)"
    ]
   },
   {
@@ -1485,7 +1502,7 @@
     }
    ],
    "source": [
-    "helpers.evaluation(doc_SVM_precision, doc_SVM_recall, doc_SVM_f1_score, doc_SVM_f1_weighted)"
+    "# helpers.evaluation(doc_SVM_precision, doc_SVM_recall, doc_SVM_f1_score, doc_SVM_f1_weighted)"
    ]
   },
   {
@@ -1676,7 +1693,10 @@
     "smote_precision = precision_score(y_test, smote_SVM_test_preds)\n",
     "smote_recall = recall_score(y_test, smote_SVM_test_preds)\n",
     "smote_f1_score = f1_score(y_test, smote_SVM_test_preds)\n",
-    "smote_weighted_f1_score = f1_score(y_test, smote_SVM_test_preds, average='weighted')"
+    "smote_weighted_f1_score = f1_score(y_test, smote_SVM_test_preds, average='weighted')\n",
+    "\n",
+    "# printing scores\n",
+    "helpers.evaluation(smote_precision, smote_recall, smote_f1_score, smote_weighted_f1_score)"
    ]
   },
   {
@@ -1693,7 +1713,7 @@
     }
    ],
    "source": [
-    "helpers.evaluation(smote_precision, smote_recall, smote_f1_score, smote_weighted_f1_score)"
+    "# helpers.evaluation(smote_precision, smote_recall, smote_f1_score, smote_weighted_f1_score)"
    ]
   },
   {
@@ -1801,7 +1821,10 @@
     "tomek_precision = precision_score(y_test, tomek_logreg_test_preds)\n",
     "tomek_recall = recall_score(y_test, tomek_logreg_test_preds)\n",
     "tomek_f1_score = f1_score(y_test, tomek_logreg_test_preds)\n",
-    "tomek_weighted_f1_score = f1_score(y_test, tomek_logreg_test_preds, average='weighted')"
+    "tomek_weighted_f1_score = f1_score(y_test, tomek_logreg_test_preds, average='weighted')\n",
+    "\n",
+    "# printing scores\n",
+    "helpers.evaluation(tomek_precision, tomek_recall, tomek_f1_score, tomek_weighted_f1_score)"
    ]
   },
   {
@@ -1818,7 +1841,7 @@
     }
    ],
    "source": [
-    "helpers.evaluation(tomek_precision, tomek_recall, tomek_f1_score, tomek_weighted_f1_score)"
+    "# helpers.evaluation(tomek_precision, tomek_recall, tomek_f1_score, tomek_weighted_f1_score)"
    ]
   },
   {
@@ -2018,7 +2041,10 @@
     "grid_precision = precision_score(y_test, grid_SVM_test_preds)\n",
     "grid_recall = recall_score(y_test, grid_SVM_test_preds)\n",
     "grid_f1_score = f1_score(y_test, grid_SVM_test_preds)\n",
-    "grid_weighted_f1_score = f1_score(y_test, grid_SVM_test_preds, average='weighted')"
+    "grid_weighted_f1_score = f1_score(y_test, grid_SVM_test_preds, average='weighted')\n",
+    "\n",
+    "# printing scores\n",
+    "helpers.evaluation(grid_precision, grid_recall, grid_f1_score, grid_weighted_f1_score)"
    ]
   },
   {
@@ -2035,7 +2061,7 @@
     }
    ],
    "source": [
-    "helpers.evaluation(grid_precision, grid_recall, grid_f1_score, grid_weighted_f1_score)"
+    "# helpers.evaluation(grid_precision, grid_recall, grid_f1_score, grid_weighted_f1_score)"
    ]
   },
   {
@@ -2171,7 +2197,9 @@
    "source": [
     "## Overfit or Underfit?\n",
     "\n",
-    "Let's backtrack for a minute and see how the model predicts the training data. We can use this F1 score to determine if the final model is overfit or underfit."
+    "Let's backtrack for a minute and see how the model predicts the training data. We can use this F1 score to determine if the final model is overfit or underfit.\n",
+    "\n",
+    "### This section needs to be updated ~"
    ]
   },
   {
