--- a/preprocessing/data_cleaning.ipynb
+++ b/preprocessing/data_cleaning.ipynb
@@ -476,7 +476,7 @@
     "    text = re.sub('(#[^\\s]+)', '', text)\n",
     "    # remove `rt` for retweet\n",
     "    text = re.sub('(rt)', '', text)\n",
-    "    # string.punctuation is a string of all punctiation marks\n",
+    "    # string.punctuation is a string of all punctuation marks\n",
     "    # so this gets rid of all punctuation\n",
     "    text = re.sub('[%s]' % re.escape(string.punctuation), '', text)\n",
     "    # getting rid of `httptco`\n",
