cross_val_score all implimented, analysis up next

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -1482,13 +1482,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Final Vector Feature for Classification Model Use"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Applying Doc2Vec Data to Train SVM Baseline\n",
     "\n",
     "The custom function `vec_for_learning` simply transforms the tagged tweets into vectors that are suitable for classification model use."
@@ -1504,6 +1497,13 @@
     "doc_y_train, doc_X_train = helpers.vec_for_learning(dbow_model, tagged_train)\n",
     "doc_y_test, doc_X_test = helpers.vec_for_learning(dbow_model, tagged_test)"
    ]
+  },
+  {
+   "source": [
+    "Next, we feed the Doc2Vec data into the previous Linear SVM model to see how this method compares."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1639,6 +1639,13 @@
     "doc_SVM_fit = helpers.model_fit(doc_SVM_mean_cv, doc_SVM_f1_score)\n",
     "doc_SVM_fit"
    ]
+  },
+  {
+   "source": [
+    "Here, it's worth noting that the Doc2Vec method produced an overfit model. Whereas the TF-IDF vectorization method on the same exact Linear SVM model produced an underfit model."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
