--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -639,7 +639,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Baseline Modeling\n",
+    "# Baseline Modeling\n",
     "\n",
     "In this section we'll be running baseline Randon Forest, Logistic Regression, Naive Bayes and Support Vector Machine (SVM) models. Out of those 4 models, the best performing one will be selected to iterate through to achieve an MVP."
    ]
@@ -1261,6 +1261,7 @@
     }
    ],
    "source": [
+    "# printing dict for testing set metrics\n",
     "pd.DataFrame.from_dict(metric_dict, orient='index')"
    ]
   },
@@ -1693,6 +1694,7 @@
     }
    ],
    "source": [
+    "# printing dict for testing set metrics\n",
     "pd.DataFrame.from_dict(metric_dict, orient='index')"
    ]
   },
@@ -2124,6 +2126,7 @@
     }
    ],
    "source": [
+    "# printing dict for testing set metrics\n",
     "pd.DataFrame.from_dict(metric_dict, orient='index')"
    ]
   },
@@ -2184,14 +2187,14 @@
     "\n",
     "The `sklearn` library provides an easy way to tune model parameters through an exhuastive search using `GridSearchCV`. It combines K-Fold Cross Validation with a grid search of parameters.\n",
     "\n",
-    "This grid search had the following paramter dictionary and took about 48 minutes to run. The full code can be found in th `SVM.ipynb` notebook.\n",
+    "This method used the following paramter dictionary and took about 48 minutes to run. \n",
     "\n",
     "**Grid Searched Parameters:**\n",
     "- 'C': [1, 10, 100]\n",
     "- 'gamma': [0.1, 0.01, 0.001]\n",
     "- 'kernel': ['rbf', 'sigmoid']\n",
     "\n",
-    "For the sake of reproducibility, the tuned model is below."
+    "For the sake of reproducibility, the tuned model is below. The full code can be found in the `SVM.ipynb` notebook."
    ]
   },
   {
@@ -2402,6 +2405,7 @@
     }
    ],
    "source": [
+    "# printing dict for testing set metrics\n",
     "pd.DataFrame.from_dict(metric_dict, orient='index')"
    ]
   },
