changed grid search explanation

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -2185,9 +2185,16 @@
    "source": [
     "# Grid Search\n",
     "\n",
-    "The `sklearn` library provides an easy way to tune model parameters through an exhuastive search using `GridSearchCV`. It combines K-Fold Cross Validation with a grid search of parameters.\n",
+    "The `sklearn` library provides an easy way to tune model parameters through an exhuastive search using `GridSearchCV`. It combines K-Fold Cross Validation with a grid search of hyperparameters.\n",
     "\n",
-    "This method used the following paramter dictionary and took about 48 minutes to run. \n",
+    "A full list of an SVC model's hyperparameters can be found in the documentation [here](https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html).\n",
+    "\n",
+    "With this grid search, I aimed to improve the C and Gamma, and seeing if any other kernels outperform the Linear kernel.\n",
+    "\n",
+    "- More information about selecting the right C and gamma can be found in [this](https://www.quora.com/What-are-C-and-gamma-with-regards-to-a-support-vector-machine) Quora post.\n",
+    "- More information about selecting the right SVM Kernel can be found in [this](https://towardsdatascience.com/svm-and-kernel-svm-fed02bef1200) TowardsDataScience article.\n",
+    "\n",
+    "The following hyperparamter dictionary was used and the grid search took about **48 minutes** to run. \n",
     "\n",
     "**Grid Searched Parameters:**\n",
     "- 'C': [1, 10, 100]\n",
@@ -2205,18 +2212,6 @@
    "source": [
     "# tuned model\n",
     "grid_SVM = svm.SVC(C=1, class_weight='balanced', gamma=0.1, kernel='rbf', random_state=20)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A full list of an SVC model's hyperparameters can be found in the documentation [here](https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html).\n",
-    "\n",
-    "For this grid search, I aimed to improve the C and Gamma, and seeing if any other kernels outperform the Linear kernel.\n",
-    "\n",
-    "- More information about selecting the right C and gamma can be found in [this](https://www.quora.com/What-are-C-and-gamma-with-regards-to-a-support-vector-machine) Quora post.\n",
-    "- More information about selecting the right SVM Kernel can be found in [this](https://towardsdatascience.com/svm-and-kernel-svm-fed02bef1200) TowardsDataScience article."
    ]
   },
   {
