--- a/models/post_MVP.ipynb
+++ b/models/post_MVP.ipynb
@@ -10,9 +10,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.6.9-final"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3",
+   "language": "python"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
@@ -27,11 +32,121 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importing relevant libraries\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import cm\n",
+    "import seaborn as sns\n",
+    "%matplotlib inline\n",
+    "plt.style.use('bmh')\n",
+    "import pickle\n",
+    "\n",
+    "# NLP libraries\n",
+    "import nltk\n",
+    "from sklearn.feature_extraction import text \n",
+    "from nltk.stem import WordNetLemmatizer, PorterStemmer\n",
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer, TfidfTransformer\n",
+    "from nltk.probability import FreqDist\n",
+    "from nltk.corpus import stopwords\n",
+    "from gensim.models.doc2vec import Doc2Vec, TaggedDocument\n",
+    "\n",
+    "# modeling libraries\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "from imblearn.under_sampling import TomekLinks\n",
+    "from collections import Counter\n",
+    "from sklearn import metrics, utils, model_selection, svm\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.metrics import precision_score, recall_score, f1_score, confusion_matrix, plot_confusion_matrix, classification_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# custom fuctions\n",
+    "\n",
+    "import sys\n",
+    "sys.path.insert(0, '../src')\n",
+    "# module_path = sys.path.insert(0, '../src')\n",
+    "\n",
+    "# if module_path not in sys.path:\n",
+    "#     sys.path.append(module_path)\n",
+    "\n",
+    "import helper_functions as helpers"
+   ]
+  },
+  {
    "source": [
     "## Method 1: Linear SVM with Count Vectorization"
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "source": [
+    "### Importing X and y from `nlp_preprocesing.ipynb`"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_lem = pickle.load(open('../pickle/X_lem.pkl', 'rb'))\n",
+    "y_lem = pd.read_pickle('../pickle/y_lem.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# setting up stop words\n",
+    "stop_words = set(stopwords.words('english'))"
+   ]
+  },
+  {
+   "source": [
+    "### TTS & CountVectorize"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X_lem, y_lem, test_size=0.20, random_state=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using count vectorizor\n",
+    "count = CountVectorizer(stop_words=stopwords)"
+   ]
   },
   {
    "cell_type": "code",
