--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -2545,7 +2545,7 @@
     "SVM_conf_matrix = plot_confusion_matrix(SVM_baseline, tfidf_data_test, y_test,\n",
     "                                 display_labels=None,\n",
     "                                 cmap=plt.cm.Blues)\n",
-    "SVM_conf_matrix.ax_.set_title('Confusion Matrix for Linear SVM, Not Normalized')\n",
+    "SVM_conf_matrix.ax_.set_title('Confusion Matrix for Linear SVM \\n with TF-IDF Vectorization)\n",
     "plt.xlabel('Predicted')\n",
     "plt.ylabel('Actual')\n",
     "plt.grid(False)\n",
@@ -2583,7 +2583,7 @@
     "                                 display_labels=None,\n",
     "                                 cmap=plt.cm.Purples,\n",
     "                                 normalize='true')\n",
-    "SVM_conf_matrix.ax_.set_title('Normalized Confusion Matrix for Linear SVM')\n",
+    "SVM_conf_matrix.ax_.set_title('Normalized Confusion Matrix for Linear SVM \\n with TF-IDF Vectorization')\n",
     "plt.xlabel('Predicted')\n",
     "plt.ylabel('Actual')\n",
     "plt.grid(False)\n",
