--- a/models/baselines.ipynb
+++ b/models/baselines.ipynb
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## pickling X_train\n",
+    "## pickling X_train for future use\n",
     "pickle_out = open(\"../pickle/X_train.pkl\",\"wb\")\n",
     "pickle.dump(X_train, pickle_out)\n",
     "pickle_out.close()"
@@ -137,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## pickling tfidf_data_train\n",
+    "## pickling tfidf_data_train for future use\n",
     "pickle_out = open(\"../pickle/tfidf_data_train.pkl\",\"wb\")\n",
     "pickle.dump(tfidf_data_train, pickle_out)\n",
     "pickle_out.close()"
