--- a/models/logisitic_regression.ipynb
+++ b/models/logisitic_regression.ipynb
@@ -403,7 +403,7 @@
     "smote_precision = precision_score(y_test, smote_logreg_test_preds)\n",
     "smote_recall = recall_score(y_test, smote_logreg_test_preds)\n",
     "smote_f1_score = f1_score(y_test, smote_logreg_test_preds)\n",
-    "snmote_weighted_f1_score = f1_score(y_test, smote_logreg_test_preds, average='weighted')"
+    "smote_weighted_f1_score = f1_score(y_test, smote_logreg_test_preds, average='weighted')"
    ]
   },
   {
@@ -433,7 +433,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metric_dict['Baseline Log Reg Oversampled with SMOTE'] = {'precision': smote_precision, 'recall': smote_recall, 'f1_score': smote_f1_score,  'weighted_f1': snmote_weighted_f1_score}"
+    "metric_dict['Baseline Log Reg Oversampled with SMOTE'] = {'precision': smote_precision, 'recall': smote_recall, 'f1_score': smote_f1_score,  'weighted_f1': smote_weighted_f1_score}"
    ]
   },
   {
