--- a/models/resampling.ipynb
+++ b/models/resampling.ipynb
@@ -24,7 +24,9 @@
  "cells": [
   {
    "source": [
-    "## Resampling Methods"
+    "## Resampling Methods\n",
+    "\n",
+    "Please note that this notebook is unfinished and only contains pseudo-code."
    ],
    "cell_type": "markdown",
    "metadata": {}
