--- a/models/post_MVP.ipynb
+++ b/models/post_MVP.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "source": [
-    "## Alternative Preprocessing Method: Count Vectorization"
+    "## Alternative Feature Engineering Method: Count Vectorization"
    ],
    "cell_type": "markdown",
    "metadata": {}
