--- a/models/SVM.ipynb
+++ b/models/SVM.ipynb
@@ -527,7 +527,25 @@
   },
   {
    "source": [
-    "## Grid Search"
+    "## Grid Search\n",
+    "\n",
+    "The `sklearn` library provides an easy way to tune model parameters through an exhuastive search using `GridSearchCV`. It combines K-Fold Cross Validation with a grid search of hyperparameters.\n",
+    "\n",
+    "A full list of an SVC model's hyperparameters can be found in the documentation [here](https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html).\n",
+    "\n",
+    "With this grid search, I aimed to improve the C and Gamma, and seeing if any other kernels outperform the Linear kernel.\n",
+    "\n",
+    "- More information about selecting the right C and gamma can be found in [this](https://www.quora.com/What-are-C-and-gamma-with-regards-to-a-support-vector-machine) Quora post.\n",
+    "- More information about selecting the right SVM Kernel can be found in [this](https://towardsdatascience.com/svm-and-kernel-svm-fed02bef1200) TowardsDataScience article.\n",
+    "\n",
+    "The following hyperparamter dictionary was used and the grid search took about **48 minutes** to run. \n",
+    "\n",
+    "**Grid Searched Parameters:**\n",
+    "- 'C': [1, 10, 100]\n",
+    "- 'gamma': [0.1, 0.01, 0.001]\n",
+    "- 'kernel': ['rbf', 'sigmoid']\n",
+    "\n",
+    "For the sake of reproducibility, the tuned model is below. The full code can be found in the `SVM.ipynb` notebook."
    ],
    "cell_type": "markdown",
    "metadata": {}
