--- a/models/post_MVP.ipynb
+++ b/models/post_MVP.ipynb
@@ -427,7 +427,9 @@
   },
   {
    "source": [
-    "Good news, this model is only slightly overfit. Nothing to be to concerned about."
+    "Good news, this model is only slightly overfit. Nothing to be to concerned about.\n",
+    "\n",
+    "**Note:** for some reason, this model becomes underfit in `final_notebook.ipynb`. This could possibly be attributed to the train-test split's random state. However, although the training F1s are different, the testing F1s are exactly the same. So we can disregard this."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -609,7 +611,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "smote_logreg = LogisticRegression(penalty='l2', random_state=35)"
+    "smote_logreg = LogisticRegression(penalty='l2', random_state=55)"
    ]
   },
   {
