--- a/models/post_MVP.ipynb
+++ b/models/post_MVP.ipynb
@@ -160,6 +160,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## pickling X_train for future use\n",
+    "pickle_out = open(\"../pickle/X_train_2.pkl\",\"wb\")\n",
+    "pickle.dump(X_train, pickle_out)\n",
+    "pickle_out.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "source": [
     "### Linear SVM Model (MVP)"
    ],
